# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  generate_diff.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/src/: generate_diff.py
