[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Azmont <alien1386@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendifff = "gendiff.scripts.gendiff:main"
