[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ravenpl1 <alien1386@mail.ru>"]

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
wemake-python-styleguide = "^0.16.0"
asciinema = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
